--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@serverless/compose": "^1.3.0",
+    "serverless": "3.38",
     "serverless-deployment-bucket": "^1.6.0",
     "serverless-domain-manager": "^7.3.8",
     "serverless-iam-roles-per-function": "^3.2.0",
